<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab0901</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Simple">Simple</string>
    <string name="CodeFont1">Code Font 1</string>
    <string name="CodeFont2">Code Font 2</string>
    <string name="Red">Red</string>
    <string name="Blue">Blue</string>
    
</resources>